# plataforma-educativa

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  connect-portainer.sh  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/app/: bootstrap.py  config.py  main.py  sandbox.py  version.py
backend/migrations/: env.py
backend/migrations/versions/: 001_create_user_table.py  002_create_content_tables.py  003_create_taxonomy_tables.py  004_create_site_config.py  005_add_fuente_activa.py  006_add_fondo_activo.py  007_add_fondo_estilo.py  008_add_asignatura_transversal.py  009_add_aula_abierta_config.py  010_add_logo_url.py  011_create_content_fts.py  012_create_content_views.py  013_create_audit_log.py  014_add_donaciones_publicidad_textos.py  015_add_redes_sociales.py  016_add_is_exam.py  017_content_taxonomia_fks.py  018_add_hash_pdf.py  019_add_mostrar_version.py
backend/scripts/: seed_admin.py  seed_e2e.py
backend/tests/: conftest.py
backend/tests/integration/: test_analytics_endpoints.py  test_auditing_endpoints.py  test_auth_endpoints.py  test_backups_endpoints.py  test_configuration_endpoints.py  test_content_endpoints.py  test_content_search.py  test_export_import_media_addressed.py  test_ficha_main.py  test_fk_integridad.py  test_health.py  test_media_endpoints.py  test_pwa_manifest.py  test_sandbox.py  test_taxonomy_endpoints.py
backend/tests/unit/: test_app_icons.py  test_auditoria.py  test_auth_service.py  test_backup_service.py  test_contenido.py  (+10 more)
(+260 files in other folders)
