[project]
name = "plataforma-educativa-backend"
version = "0.1.0"
description = "CMS educativo - API (FastAPI, hexagonal)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "argon2-cffi>=23.1",
  "pyjwt>=2.8",
  "python-multipart>=0.0.9",
  "nh3>=0.2",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx", "ruff", "black", "mypy"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
# El dominio y la aplicación deben tipar estrictamente; los adapters pueden relajarse por módulo.

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
